edit and add api base url constant

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,9 @@ spring.thymeleaf.mode= HTML
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix= .html
 
-spring.devtools.restart.additional-paths = files
+#spring.devtools.restart.additional-paths = files
 spring.devtools.restart.exclude = static/**
+
+
+#base location url
+#application.base.uri.student.api= http://localhost:8084/student
