--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.devtools.restart.exclude = static/**
 
 
 #base location url
-#application.base.uri.student.api= http://localhost:8084/student
+application.base.uri.student.api= http://localhost:8084/student
