--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.thymeleaf.suffix= .html
 #spring.devtools.restart.additional-paths = files
 spring.devtools.restart.exclude = static/**
 
-
 #base location url
 application.base.uri.student.api= http://localhost:8080/student
+
+spring.messages.encoding=UTF-8
+server.tomcat.uri-encoding=UTF-8
+uspring.thymeleaf.encoding=UTF-8
