--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,18 @@
-server.port= 8081
-
+server.port=8081
 #thymeleaf
-spring.thymeleaf.cache= false
-spring.thymeleaf.check-template= true
-spring.thymeleaf.check-template-location= true
-spring.thymeleaf.servlet.content-type= text/html
-spring.thymeleaf.enabled= true
-spring.thymeleaf.encoding= UTF-8
-spring.thymeleaf.mode= HTML
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix= .html
-
+spring.thymeleaf.suffix=.html
 #spring.devtools.restart.additional-paths = files
-spring.devtools.restart.exclude = static/**
-
+spring.devtools.restart.exclude=static/**
 #base location url
-application.base.uri.student.api= http://localhost:8080/student
-
+application.base.uri.student.api=http://localhost:8080/student
 spring.messages.encoding=UTF-8
 server.tomcat.uri-encoding=UTF-8
 uspring.thymeleaf.encoding=UTF-8
